--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -17,4 +17,4 @@ test:
 # set these environment variables on your prod server
 production:
   <<: *defaults
-  uri: <%= ENV['MONGOHQ_URL'] %>
+  url: <%= ENV['MONGOHQ_URL'] %>
